feat: remove unnecessary JVM argument for ASM package access