@@ -30,7 +30,6 @@ fun getJavaAddOpensOptions(): List<String> {
         listOf(
             "--add-opens=java.base/java.util=ALL-UNNAMED",
             "--add-opens=java.base/java.lang=ALL-UNNAMED",
-            "--add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED",
         )
     } else {
         emptyList()
